--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <div class="container">
       <div class = "border">
+      <div class = "weather-app">
         <h1>Melbourne</h1>
         <ul>
           <li>Saturday 16:00</li>
