--- a/index.html
+++ b/index.html
@@ -11,17 +11,37 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Vanilla Weather App</title>
   </head>
   <body>
     <div class="container">
       <div class="wrapper">
         <div class="weather-app">
-          <h1>Melbourne</h1>
-          <ul>
-            <li>Saturday 16:00</li>
-            <li>cloudy</li>
-          </ul>
+          <form id="search-form">
+            <div class="container">
+              <div class="row">
+                <div class="col-9">
+                  <input
+                    id="search-input"
+                    type="search"
+                    placeholder="Type a place"
+                    class="form-control"
+                  />
+                </div>
+                <div class="col-3">
+                  <input type="submit" value="Search" />
+                </div>
+              </div>
+            </div>
+          </form>
+          <div class="overview">
+            <h1>Melbourne</h1>
+            <ul>
+              <li>Saturday 16:00</li>
+              <li>cloudy</li>
+            </ul>
+          </div>
           <div class="container">
             <div class="row">
               <div class="col-6 indicator">
