Added Weather API
Temperature changes according to the real-time temperature in the searched place.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   alt="cloudy"
                 />
                 <div class="weather-app-temp">
-                  <strong>14</strong>
+                  <strong id="temp">14</strong>
                   <a href="#">°C</a>
                   <span> | </span>
                   <a href="#">°F</a>
