--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>Melbourne</h1>
             <ul>
               <li>Saturday 16:00</li>
-              <li>cloudy</li>
+              <li id="description">cloudy</li>
             </ul>
           </div>
           <div class="container">
