Real-time weather indications with API
Humidity&wind real-time data reflects with the searched place.

--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
               </div>
               <div class="col-6">
                 <ul>
-                  <li>Precipitation: 0%</li>
-                  <li>Humidity: 54%</li>
-                  <li>Wind: 19 mph</li>
+                  <li>Humidity: <span id="humidity">54</span>%</li>
+                  <li>Wind: <span id="wind">19</span>mph</li>
                 </ul>
               </div>
             </div>
