✨ Format real-time last updated time

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="overview">
             <h1>Melbourne</h1>
             <ul>
-              <li>Saturday 16:00</li>
+              <li id="local-time">Saturday 16:00</li>
               <li id="description">cloudy</li>
             </ul>
           </div>
