--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <img
                   src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
                   alt="cloudy"
+                  id="icon"
                 />
                 <div class="weather-app-temp">
                   <strong id="temp">14</strong>
