✨ Added UI of temperature unit conversion

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 />
                 <div class="weather-app-temp">
                   <strong id="temp">14</strong>
-                  <a href="#">°C</a>
+                  <a href="#" id="celsius" class="active">°C</a>
                   <span> | </span>
-                  <a href="#">°F</a>
+                  <a href="#" id="farenheit">°F</a>
                 </div>
               </div>
               <div class="col-6">
