:building_construction: Forecast structure built

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
               </div>
             </div>
           </div>
+          <div class="forecast"></div>
         </div>
       </div>
       <small>
