--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
                   />
                 </div>
                 <div class="col-3">
-                  <input type="submit" value="Search" />
+                  <input
+                    type="submit"
+                    value="Search"
+                    class="btn btn-primary w-100"
+                  />
                 </div>
               </div>
             </div>
